# attendance-api-OT-Microservices

./: Dockerfile  Makefile  app.py  config.yaml  db-changelog.xml  liquibase.properties  pyproject.toml
migration/: db-changelog.xml  db.changelog-master.xml
router/router/: attendance.py
scripts/: build_attendance_artifact.sh  migrate_dates_to_iso.py  migrate_dates_to_iso_psycopg2.py  migrate_dates_to_iso_v2.py
utils/: liquibase.properties
