[tool.poetry]
name = "attendance-api"
version = "0.1.0"
description = "Attendance API microservice"
authors = ["Opstree Solutions"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Core runtime
flask = "^2.3.2"
gunicorn = "^21.2.0"

# Existing libs
peewee = "^3.16.2"
voluptuous = "^0.13.1"
redis = "^4.6.0"
json-logging-py = "^0.2"
jsonformatter = "^0.3.2"
python-json-logger = "^2.0.7"
flask-caching = "^2.0.2"
prometheus-flask-exporter = "^0.22.4"
flasgger = "0.9.7b2"

# Optional (only if used)
psycopg2-binary = "^2.9.6"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
